--- a/storage/mysql/68-mysql.html
+++ b/storage/mysql/68-mysql.html
@@ -32,7 +32,10 @@
         <label for="node-config-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
         <input type="text" id="node-config-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
-    <div class="form-tips"><span data-i18n="[html]mysql.tip"></span></div>
+    <div class="form-row">
+        <label for="node-config-input-schemaAccess"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.schemaAccess"></span></label>
+        <input type="checkbox" id="node-config-input-schemaAccess" value="true">
+    </div>
 </script>
 
 <script type="text/javascript">
@@ -44,7 +47,8 @@
             port: {value:"3306",required:true},
             db: {value:"",required:true},
             tz: {value:""},
-            charset: {value:"UTF8"}
+            charset: {value:"UTF8"},
+            schemaAccess:{value:""}
         },
         credentials: {
             user: {type: "text"},
