--- a/storage/mysql/68-mysql.html
+++ b/storage/mysql/68-mysql.html
@@ -52,7 +52,7 @@ PLEASE CONTACT humans[at]mayalabs.io FOR ANY COPYRIGHT COMPLAINS/TAKEDOWNS
         <input type="text" id="node-config-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
     <div class="form-row">
-        <label for="node-config-input-schemaAccess"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.schemaAccess"></span></label>
+        <label for="node-config-input-schemaAccess"><i class="fa fa-tag"></i> access schema</label>
         <input type="checkbox" id="node-config-input-schemaAccess" value="true">
     </div>
 </script>
@@ -88,6 +88,12 @@ PLEASE CONTACT humans[at]mayalabs.io FOR ANY COPYRIGHT COMPLAINS/TAKEDOWNS
         <label for="node-input-name"><i class="fa fa-tag"></i> <span data-i18n="node-red:common.label.name"></span></label>
         <input type="text" id="node-input-name" data-i18n="[placeholder]node-red:common.label.name">
     </div>
+    <div class="form-row">
+        <label for="node-input-typed-query"><i class="fa fa-list"></i>SQL Query</label>
+        <input id="node-input-typed-query" type="text" style="width: 70%">
+        <input id="node-input-query" type="hidden">
+        <input id="node-input-payloadTypequery" type="hidden">
+    </div>
 </script>
 
 <script type="text/javascript">
@@ -96,7 +102,9 @@ PLEASE CONTACT humans[at]mayalabs.io FOR ANY COPYRIGHT COMPLAINS/TAKEDOWNS
         color:"#e97b00",
         defaults: {
             mydb: {type:"MySQLdatabase",required:true},
-            name: {value:""}
+            name: {value:""},
+            query: {value: "payload.query"},
+            payloadTypequery: {value: "msg"}
         },
         inputs:1,
         outputs:1,
@@ -107,6 +115,44 @@ PLEASE CONTACT humans[at]mayalabs.io FOR ANY COPYRIGHT COMPLAINS/TAKEDOWNS
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
+        },
+        exportable: true,
+        oneditprepare: function() {
+            var fullType = {
+                value: "payload.query",
+                label: "msg.payload.query",
+                hasValue: false
+            };
+            $("#node-input-typed-query").typedInput({
+                default: fullType,
+                types:['str', fullType],
+                typeField: $("#node-input-payloadTypequery")
+            });
+            if ((this.payloadTypequery === "payload.query")) {
+                // show query message object
+                $("#node-input-typed-query").typedInput('type','payload.query');
+            } else {
+                var property = this.query
+                $("#node-input-typed-query").typedInput('type','str');
+                $("#node-input-typed-query").typedInput('value', property);
+            }
+            $("#node-input-typed-query").on('change',function(e, v) {
+                if ($("#node-input-typed-query").typedInput('type') === 'str' &&  $("#node-input-typed-complete").typedInput('value') === '') {
+                    // $("#node-input-typed-query").typedInput('type', 'str');
+                    $("#node-input-typed-query").typedInput('value', "");
+                }
+            });
+        },
+        oneditsave: function(){
+            var type = $("#node-input-typed-query").typedInput('type');
+            var value = $("#node-input-typed-query").typedInput('value')
+            console.log("🚀 ~ file: 68-mysql.html:149 ~ value:", value)
+            console.log("🚀 ~ file: 68-mysql.html:148 ~ type:", type)
+            if (type === 'payload.query') {
+                $("#node-input-query").val("payload.query");
+            } else {
+                $("#node-input-query").val($("#node-input-typed-query").typedInput('value'));
+            }
         }
     });
 </script>
